# default-rules

./: .gitignore  analysis.ipynb  justfile  out.csv  pyproject.toml  rules.md
